Knocking out more off-by-1px issues.
Container widths are spot on, as are fixed header column widths.

I think I only have one left: the virtual scrollbar
is 1px too tall in y scrolling configs.  Then I need a drink.

--- a/src/datatable/assets/skins/sam/datatable-scroll-skin.css
+++ b/src/datatable/assets/skins/sam/datatable-scroll-skin.css
@@ -1,6 +1,4 @@
 .yui3-skin-sam .yui3-datatable-scroll-columns {
-    border: 1px solid #cbcbcb;
-    border-bottom: 0 none;
     border-collapse: separate;
     /* IE7- don't support border-spacing, but separate is needed for more
      * reliable dimension calculation for scrollable's header width sync,
@@ -25,7 +23,7 @@
 .yui3-skin-sam .yui3-datatable-y-scroller {
     border: 1px solid #cbcbcb;
 }
-.yui3-skin-sam .yui3-datatable-x-scroller .yui3-datatable-scroll-columns,
+
 .yui3-skin-sam .yui3-datatable-scrollable-x .yui3-datatable-y-scroller,
 .yui3-skin-sam .yui3-datatable-x-scroller .yui3-datatable-table,
 .yui3-skin-sam .yui3-datatable-y-scroller .yui3-datatable-table {
